tests/fixtures/invalid/pow_float_list_none.py
# Cannot call pow() with Float, List[int], None
x = pow(1.0, [1, 2, 3], None)
